@@ -1,6 +1,13 @@
 Pending changes in the mainline
 ===============================
 
+Documentation
+-------------
+
+* Removed the "LimitJobs" configuration that is not used anymore since the new
+  JobEngine has been introduced (in  Orthanc 1.4.0).  The pending list of jobs
+  is unlimited.
+
 
 Version 1.10.0 (2022-02-23)
 ===========================
